# aria2c-browse

./: Cargo.toml  README.md  register_handler.bat
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/tests/: integration.rs  mod.rs  url_decode.rs
